# disk-space-optimizer

./: Cargo.toml  LICENSE  README.md
.github/workflows/: static.yml
src/: main.rs  tests.rs
