[package]
name = "disk-space-optimizer"
version = "0.1.1"
edition = "2021"
description = """
A command-line interface tool for optimizing disk space.
"""
categories = ["command-line-interface"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.4", features = ["derive"] }
dialoguer = "0.10.4"
indicatif = "0.17.3"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = 3
lto = true
incremental = true
codegen-units = 1
debug = false      # production

[dev-dependencies]
mockall = "0.11.4"
pretty_assertions = "1.3.0"
tempfile = "3.5.0"

# debug = true # development perf & flamegraph

# cargo build --release
# perf record -g --call-graph dwarf target/release/your-program
# perf report

# You can use cargo flamegraph to build and profile a Rust project by specifying the --build and --profile options. For example:
# cargo flamegraph --build --profile=release --bin <binary_name>
